argocd/auth/authentik/authentik-ingress.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authentik-route
  namespace: media
spec:
  parentRefs:
  - group: gateway.networking.k8s.io	
    kind: Gateway	
    name: gateway-default
    namespace: default
  hostnames: ["auth.lazydogs.work"]
  rules:
  - backendRefs:
      - group: ''	
        kind: Service	
        name: authentik-server
        port: 80
        weight: 1
    matches:
      - path:
          type: PathPrefix
          value: /
